<resources>
    <string name="app_name">NoProblem</string>
    <string name="textoInicial">Pensando que pode ou não pode, em ambos os casos, você está certo(a).Henry Ford</string>
    <string name="btnAvancar">Avançar</string>
    <string name="primeiraPergunta">Qual o problema que você deseja resolver?</string>
    <string name="dicaPerguntaUm">Insira um problema.</string>
    <string name="pergunta_final1">Existe algo nesse problema maior que suas capacidades de pensar e agir?</string>
    <string name="pergunta_final2">O que você pode fazer agora mesmo para resolver esse problema?</string>
    <string name="pergunta_final3">Em quanto tempo você se compromete a resolver esse problema?</string>
    <string name="btnAgir">AGIR AGORA</string>
</resources>