<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F8E9"
    tools:context=".PerguntaUmActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="10dp"
        android:backgroundTint="#EEEEEE">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/primeiraPergunta"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="25sp" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/txtPerguntaUm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:hint="@string/dicaPerguntaUm"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="#757575" />

    <Button
        android:id="@+id/btnTelaPerguntaUm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green"
        android:text="@string/btnAvancar" />


</FrameLayout>